# Pallas-Unbound

./: .gitignore  Makefile  README.md  pyproject.toml
benchmarks/: baseline_mha.py  economics.py  inference_decode.py  roofline.py  scaling.py
completed_files/: Makefile  project_plan_raw.md  setup_vm_raw.sh
docs/: assembly_analysis.md  implementation_roadmap.md  project_plan.md
docs/implementation_timeline/: pallas_flash_implementation_roadmap.md
profiling/: hlo_analyzer.py  trace_viewer.py  xla_flags.py
scripts/: capture_trace.sh  dump_hlo.sh  run_benchmark.sh  setup_vm.sh
src/pallas_flash/: config.py
src/pallas_flash/distributed/: collectives.py  mesh.py
src/pallas_flash/kernels/: attention.py  decoding.py  layout.py  pipeline.py  tiling.py
src/pallas_flash/low_level/: intrinsics.py
src/pallas_flash/ops/: interface.py
tests/: test_correctness.py  test_distributed.py  test_memory.py  test_numerics.py
