# Dependencies: jax[tpu], flax, chex

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pallas-flash-v5e"
version = "0.1.0"
description = "High-Performance IO-Aware Attention Kernels for TPU v5e Architecture"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Arjun Som", email = "arjunsom29@gmail.com"}
]
keywords = ["jax", "tpu", "pallas", "flash-attention", "kernel-optimization", "v5e"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies required to run the kernel
dependencies = [
    "jax[tpu]>=0.4.23",        
    "jaxlib>=0.4.23",
    "flax>=0.8.0",        
    "einops>=0.7.0",      
    "chex>=0.1.85",       
    "numpy>=1.24.0",
    "optax>=0.1.9",       
    "tqdm>=4.66.0"       
]

[project.optional-dependencies]
# Tools for development, analysis, and visualization
dev = [
    "pytest>=7.4.0",      
    "matplotlib>=3.8.0",  
    "tensorboard>=2.15.0",
    "black>=23.0.0",      
    "isort>=5.12.0",      
    "pandas>=2.1.0"       
]

[project.urls]
"Homepage" = "https://github.com/ArjunSom9/Pallas-Unbound/"

# --- Tool Configuration ---

# 1. Pytest Configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"

# 2. Black Configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

# 3. Isort Configuration
[tool.isort]
profile = "black"
multi_line_output = 3